# bcthesis

.github/workflows/: deploy-docs.yaml
fw/main_project/: CMakeLists.txt  sdkconfig.old
fw/main_project/main/: main.cpp  main.hpp
fw/test_project/: CMakeLists.txt  Doxyfile  sdkconfig
fw/test_project/components/AirMonitoring/: AirMonitoring_i2c.cpp  AirMonitoring_pms.cpp  AirMonitoring_power.cpp  AirMonitoring_sgp30.cpp  AirMonitoring_spi.cpp  AirMonitoring_utils.cpp  AirMonitoring_wifi.cpp  CMakeLists.txt
fw/test_project/components/AirMonitoring/include/: AirMonitoring_bmp388.hpp  AirMonitoring_i2c.hpp  AirMonitoring_mcp3202.hpp  AirMonitoring_pinout.hpp  AirMonitoring_pms.hpp  AirMonitoring_power.hpp  AirMonitoring_sgp30.hpp  AirMonitoring_sht.hpp  AirMonitoring_spi.hpp  AirMonitoring_utils.hpp  AirMonitoring_veml.hpp  AirMonitoring_wifi.hpp
hw/: .gitignore
hw/iotAirMonitoring/: Makefile  fp-info-cache  interface.sch  iotAirMonitoring-cache.lib  iotAirMonitoring.kicad_pcb  iotAirMonitoring.lib  iotAirMonitoring.pro  iotAirMonitoring.sch  powerManagement.sch  sym-lib-table
hw/symbols/: mainBoard.kicad_sym
mec/: case_bot.SLDPRT  case_top.SLDPRT
text/: czplain.bst  nastaveni.tex  sablona-obhaj.tex  sablona-prace.tex  sablona-prace.toa
text/assets/: block_schematic-blank.drawio  block_schematic-full.drawio  data_flow.drawio  flowchart.drawio
text/obrazky/: ChirpSpreadSpectrum.eps
text/text/: cile.tex  data.tex  literatura.bib  literatura.tex  mechanika.tex  pcb.tex  prilohy.tex  reseni.tex  teorie.tex  textReplace.py  uvod.tex  zaver.tex
(+68 files in other folders)
